--- a/ElibraryManagement/Site1.Master
+++ b/ElibraryManagement/Site1.Master
@@ -51,7 +51,7 @@
                             <asp:LinkButton ID="linkButton1" class="nav-link" runat="server" href="#">View Books</asp:LinkButton>
                         </li>
                         <li class="nav-item active">
-                            <asp:LinkButton ID="linkButton2" class="nav-link" runat="server" href="#">User Login</asp:LinkButton>
+                            <asp:LinkButton ID="linkButton2" class="nav-link" runat="server" href="userlogin.aspx">User Login</asp:LinkButton>
                         </li>
                         <li class="nav-item active">
                             <asp:LinkButton ID="linkButton3" class="nav-link" runat="server" href="#">Sign Up</asp:LinkButton>
