--- a/ElibraryManagement/Site1.Master
+++ b/ElibraryManagement/Site1.Master
@@ -8,11 +8,13 @@
 
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="datatables/css/jquery.dataTables.min.css" rel="stylesheet" />
+    <script src="datatables/js/dataTables.bootstrap5.min.js"></script>
     <link href="fontawesome/css/all.css" rel="stylesheet" />
     <link href="css/customstylesheet.css" rel="stylesheet" />
-
+    <script src="datatables/js/jquery-3.5.1.js"></script>
     <script src="bootstrap/js/jquery.slim.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="datatables/js/jquery.dataTables.min.js"></script>
     <script src="bootstrap/js/popper.min.js"></script>
 
     <asp:ContentPlaceHolder ID="head" runat="server">
