--- a/ElibraryManagement/Site1.Master
+++ b/ElibraryManagement/Site1.Master
@@ -62,7 +62,7 @@
                             <asp:LinkButton ID="logoutLinkButton" class="nav-link" runat="server" Visible="false" OnClick="logoutLinkButton_Click" >Logout</asp:LinkButton>
                         </li>
                         <li class="nav-item active">
-                            <asp:LinkButton ID="helloUserLinkButton" class="nav-link" runat="server" Visible="false">Hello User</asp:LinkButton>
+                            <asp:LinkButton ID="helloUserLinkButton" class="nav-link" runat="server" Visible="false" OnClick="helloUserLinkButton_Click">Hello User</asp:LinkButton>
                         </li>
                     </ul>
                 </div>
